[tool.poetry]
name = "projexd-group07"
version = "0.1.0"
description = ""
authors = ["HEKUCHAN <heitorhirose@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
